--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="MobilneDizalice nudi širok asortiman visokokvalitetnih mobilnih dizalica za više vrsta vozila. Savršene su za mehaničare, entuzijaste i svakoga kome je potrebno pouzdano i svestrano rešenje za podizanje vozila. Uz našu stručnu korisničku podršku i konkurentne cene, možete verovati MobilneDizalice da će vam obezbediti najbolju opremu za podizanje vozila za vaše potrebe. Pregledajte naš izbor danas!"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>MobilneDizalice</title>
   </head>
   <body>
     <div id="overlays"></div>
